src/test/ui/suggestions/trait-with-missing-associated-type-restriction.stderr
error[E0308]: mismatched types
  --> $DIR/trait-with-missing-associated-type-restriction.rs:10:31
   |
LL |     fn funq(&self) -> Self::A {}
   |                               ^^ expected associated type, found `()`
   |
   = note: expected associated type `<Self as Trait<T>>::A`
                    found unit type `()`
help: a method is available that returns `<Self as Trait<T>>::A`
  --> $DIR/trait-with-missing-associated-type-restriction.rs:8:5
   |
LL |     fn func(&self) -> Self::A;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ consider calling `Trait::func`

error[E0308]: arguments to this function are incorrect
  --> $DIR/trait-with-missing-associated-type-restriction.rs:14:5
   |
LL |     qux(x.func())
   |     ^^^^--------^
   |         |
   |         expected `usize`, found `<impl Trait as Trait>::A`
   |
note: function defined here
  --> $DIR/trait-with-missing-associated-type-restriction.rs:42:4
   |
LL | fn qux(_: usize) {}
   |    ^^^ --------
help: provide an argument of the correct type
   |
LL |     qux({usize})
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/trait-with-missing-associated-type-restriction.rs:18:5
   |
LL |     qux(x.func())
   |     ^^^^--------^
   |         |
   |         expected `usize`, found `<T as Trait>::A`
   |
note: function defined here
  --> $DIR/trait-with-missing-associated-type-restriction.rs:42:4
   |
LL | fn qux(_: usize) {}
   |    ^^^ --------
help: provide an argument of the correct type
   |
LL |     qux({usize})
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/trait-with-missing-associated-type-restriction.rs:22:5
   |
LL |     qux(x.func())
   |     ^^^^--------^
   |         |
   |         expected `usize`, found `<impl Trait<i32> as Trait<i32>>::A`
   |
note: function defined here
  --> $DIR/trait-with-missing-associated-type-restriction.rs:42:4
   |
LL | fn qux(_: usize) {}
   |    ^^^ --------
help: provide an argument of the correct type
   |
LL |     qux({usize})
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/trait-with-missing-associated-type-restriction.rs:26:7
   |
LL |     x.funk(3);
   |       ^^^^ - expected `<T as Trait<i32>>::A`, found `{integer}`
   |
note: associated function defined here
  --> $DIR/trait-with-missing-associated-type-restriction.rs:9:8
   |
LL |     fn funk(&self, _: Self::A);
   |        ^^^^
help: provide an argument of the correct type
   |
LL |     x.funk({<T as Trait<i32>>::A})(3);
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/trait-with-missing-associated-type-restriction.rs:27:5
   |
LL |     qux(x.func())
   |     ^^^^--------^
   |         |
   |         expected `usize`, found `<T as Trait<i32>>::A`
   |
note: function defined here
  --> $DIR/trait-with-missing-associated-type-restriction.rs:42:4
   |
LL | fn qux(_: usize) {}
   |    ^^^ --------
help: provide an argument of the correct type
   |
LL |     qux({usize})
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/trait-with-missing-associated-type-restriction.rs:31:5
   |
LL |     qux(x.func())
   |     ^^^^--------^
   |         |
   |         expected `usize`, found `D`
   |
note: function defined here
  --> $DIR/trait-with-missing-associated-type-restriction.rs:42:4
   |
LL | fn qux(_: usize) {}
   |    ^^^ --------
help: provide an argument of the correct type
   |
LL |     qux({usize})
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/trait-with-missing-associated-type-restriction.rs:35:5
   |
LL |     qux(x.func())
   |     ^^^^--------^
   |         |
   |         expected `usize`, found `()`
   |
note: function defined here
  --> $DIR/trait-with-missing-associated-type-restriction.rs:42:4
   |
LL | fn qux(_: usize) {}
   |    ^^^ --------
help: provide an argument of the correct type
   |
LL |     qux({usize})
   |     ^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/trait-with-missing-associated-type-restriction.rs:39:5
   |
LL |     qux(x.func())
   |     ^^^^--------^
   |         |
   |         expected `usize`, found `<T as Trait>::A`
   |
note: function defined here
  --> $DIR/trait-with-missing-associated-type-restriction.rs:42:4
   |
LL | fn qux(_: usize) {}
   |    ^^^ --------
help: provide an argument of the correct type
   |
LL |     qux({usize})
   |     ^^^^^^^^^^^^

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0308`.
